# segmentation-caffe-cpp

./: CMakeLists.txt  README.md
models/: deploy.prototxt
src/: caffe_cpp_demo.cpp
